# zng-network-sim

./: DEMAND_MODEL_GUIDE.md  LLM_INTEGRATION.md  README.md  RELIABILITY_MODEL_GUIDE.md  SETUP.md  pyproject.toml  render.yaml  test_llm_connection.py
.devcontainer/: devcontainer.json
scenarios/: base_case.yaml
src/zng_simulator/: __init__.py
src/zng_simulator/api/: __init__.py  context.py  narrative.py  server.py  tools.py
src/zng_simulator/config/: __init__.py  battery.py  chaos.py  charger.py  demand.py  finance.py  opex.py  revenue.py  scenario.py  station.py  vehicle.py
src/zng_simulator/dashboard/: __init__.py  app.py
src/zng_simulator/dashboard/assets/: README.md
src/zng_simulator/engine/: __init__.py  cashflow.py  charger_reliability.py  charger_tco.py  cost_per_cycle.py  degradation.py  demand.py  derived.py  field_data.py  optimizer.py  orchestrator.py  pack_tco.py
src/zng_simulator/finance/: __init__.py  charger_npv.py  dcf.py  dscr.py  sensitivity.py  statements.py
src/zng_simulator/models/: __init__.py  field_data.py  results.py
tests/: conftest.py  test_api.py  test_cashflow.py  test_charger_npv.py  test_charger_reliability.py  test_charger_tco.py  test_cpc.py  test_dcf.py  test_degradation.py  test_demand.py  test_derived.py  test_dscr.py  test_field_data.py  test_finance_config.py  test_optimizer.py  test_orchestrator.py  test_pack_tco.py  test_serialization.py  test_statements.py  test_validation.py
